--- a/styles/style.css
+++ b/styles/style.css
@@ -13,6 +13,7 @@ main.content {
   margin: 0 auto;
   padding: 1em;
   max-width: 600pt;
+  line-height: 2;
 }
 
 /** Visual hardbreaks */
@@ -50,5 +51,25 @@ nav a {
 @media (hover: hover) {
   nav a:hover {
     background-color: var(--navbar-button-highlight);
+  }
+}
+
+/* Mobile styles */
+@media only screen and (max-width: 450px) {
+  main.content {
+    margin: 0 auto;
+    padding: 2em;
+  }
+
+  nav ul {
+    justify-content: center;
+  }
+}
+
+/* Tablet styles */
+@media only screen and (min-width: 451px) and (max-width: 960px) {
+  main.content {
+    margin: 0 auto;
+    padding: 2em;
   }
 }
