--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,7 @@
+@import url("variables.css");
+@import url("colors.css");
+@import url("typography.css");
+
 /** General style */
 body * {
   box-sizing: border-box;
