fix: Don't import more than is needed

--- a/templates/support.njk
+++ b/templates/support.njk
@@ -1,6 +1,6 @@
 {% extends "_layout.njk" %}
 
-{% from "_link.njk" import link, hint, relMe, mailto %}
+{% from "_link.njk" import link %}
 
 {% block content %}
 <h1 id="support-and-funding">Support and Funding</h1>
