feat: Add a link to my blog on the header

--- a/pages/styles/style.css
+++ b/pages/styles/style.css
@@ -66,6 +66,12 @@ nav a {
 	overflow: hidden;
 }
 
+nav a.disabled {
+	text-decoration: none;
+	pointer-events: none;
+	background-color: var(--navbar-background);
+}
+
 @media (hover: hover) {
 	nav a:hover {
 		background-color: var(--navbar-button-highlight);
@@ -90,4 +96,14 @@ nav a {
 		margin: 0 auto;
 		padding: 2em;
 	}
+}
+
+.visually-hidden {
+	clip: rect(0 0 0 0);
+	clip-path: inset(50%);
+	height: 1px;
+	overflow: hidden;
+	position: absolute;
+	white-space: nowrap;
+	width: 1px;
 }
