chore: Point to our new blog domain

--- a/templates/_layout.njk
+++ b/templates/_layout.njk
@@ -16,7 +16,7 @@
 			<nav>
 				<ul>
 					<li>{{ pageLink(template.slug, "index", "About") }}</li>
-					<li>{{ link("https://averagehelper.github.io", "Blog") }}</li>
+					<li>{{ link("https://blog.average.name", "Blog") }}</li>
 					<li>{{ pageLink(template.slug, "support") }}</li>
 				</ul>
 			</nav>
