--- a/templates/index.njk
+++ b/templates/index.njk
@@ -53,7 +53,7 @@
 		}}.
 	</li>
 	<li>
-		{{ link("https://averagehelper.github.io", "My blog") }}
+		{{ link("https://blog.average.name", "My blog") }}
 		&ndash; An experiment to see how GitHub Pages work. I post ramblings there from time to
 		time. The posts are written in {{ hint("https://www.markdownguide.org", "Markdown") }},
 		and the site is generated automagically using {{ hint("https://www.zola.com", "Zola") }}.
