chore: Move to Forgejo

--- a/templates/index.njk
+++ b/templates/index.njk
@@ -15,8 +15,8 @@
 <h2 id="projects">Stuff I do for fun</h2>
 <p>
 	Here's just a few things I worked on myself that I'm proud of. (You can {{
-		link("https://github.com/AverageHelper", "check my GitHub") }} or {{ 
-		link("https://codeberg.org/AverageHelper", "Codeberg") }} for more.)
+		link("https://github.com/AverageHelper", "check my GitHub") }}, {{ 
+		link("https://codeberg.org/AverageHelper", "Codeberg") }}, or {{ link("https://git.average.name/AverageHelper", "my Forgejo instance") }} for more.)
 </p>
 
 <ul>
