feat: Link to Forgejo in header (#2)
I have my own Forgejo instance now :3

Reviewed-on: https://git.average.name/AverageHelper/portfolio/pulls/2
Co-authored-by: AverageHelper <me@average.name>
Co-committed-by: AverageHelper <me@average.name>

--- a/templates/_layout.njk
+++ b/templates/_layout.njk
@@ -17,6 +17,7 @@
 				<ul>
 					<li>{{ pageLink(template.slug, "index", "About") }}</li>
 					<li>{{ link("https://blog.average.name", "Blog") }}</li>
+					<li>{{ link("https://git.average.name/AverageHelper", "Code") }}</li>
 					<li>{{ pageLink(template.slug, "support") }}</li>
 				</ul>
 			</nav>
