--- a/templates/index.njk
+++ b/templates/index.njk
@@ -21,23 +21,23 @@
 
 <ul>
 	<li>
-		{{ link("https://github.com/AverageHelper/Gamgee", "Gamgee") }}
+		<strong>{{ link("https://github.com/AverageHelper/Gamgee", "Gamgee") }}</strong>
 		&ndash; A fun little Discord bot to help manage a music queue for public DJ events.
 		Written in {{ hint("https://www.typescriptlang.org", "TypeScript") }}.
 	</li>
 	<li>
-		{{ link("https://codeberg.org/AverageHelper/meta-comments", "meta-comments") }}
+		<strong>{{ link("https://codeberg.org/AverageHelper/meta-comments", "meta-comments") }}</strong>
 		&ndash; The first VS Code plugin I ever published! It decorates code based on
 		specially-formatted comments.
 	</li>
 	<li>
-		{{ link("https://github.com/AverageHelper/ItemEncryptor", "ItemEncryptor") }}
+		<strong>{{ link("https://github.com/AverageHelper/ItemEncryptor", "ItemEncryptor") }}</strong>
 		&ndash; A {{ hint("https://www.swift.org", "Swift") }} package to make
 		data encryption easy. I use this in some of my smaller projects to
 		facilitate end-to-end encryption of sensitive data.
 	</li>
 	<li>
-		{{ link("https://recorded.finance", "Recorded Finance") }}
+		<strong>{{ link("https://recorded.finance", "Recorded Finance") }}</strong>
 		&ndash; An {{ hint("https://en.wikipedia.org/wiki/End-to-end_encryption", "end-to-end encrypted") }}
 		finance app for keeping track of account balances. I had a version of this written for iOS
 		in Swift, but I've began to port that project to the web for better cross-platform
@@ -48,12 +48,12 @@
 		}} on the front- and back-end.
 	</li>
 	<li>
-		{{ link("https://apps.apple.com/us/app/trump-donald/id1036041535", "Trump Donald") }}
+		<strong>{{ link("https://apps.apple.com/us/app/trump-donald/id1036041535", "Trump Donald") }}</strong>
 		&ndash; An iOS application based on the game {{ hint("https://en.wikipedia.org/wiki/Whac-A-Mole", "Whac-a-mole")
 		}}.
 	</li>
 	<li>
-		{{ link("https://blog.average.name", "My blog") }}
+		<strong>{{ link("https://blog.average.name", "My blog") }}</strong>
 		&ndash; An experiment to see how GitHub Pages work. I post ramblings there from time to
 		time. The posts are written in {{ hint("https://www.markdownguide.org", "Markdown") }},
 		and the site is generated automagically using {{ hint("https://www.zola.com", "Zola") }}.
@@ -86,23 +86,38 @@
 
 <hr />
 
-<h2 id="contact">Contact</h2>
+<h1 id="contact">Contact</h1>
 <p>If you must reach me, I'm often found in these places:</p>
 
-<ul>
+<ul class="contact">
 	<li>
-		Codeberg: {{ relMe("https://codeberg.org/AverageHelper", "AverageHelper") }}
+		<a href="https://codeberg.org/AverageHelper" target="_blank" rel="noopener noreferrer me" aria-hidden="true">
+			<img class="logo codeberg" src="/images/codeberg-logo.svg" alt="Codeberg's logo" />
+		</a>
+		<a class="link" href="https://codeberg.org/AverageHelper" target="_blank" rel="noopener noreferrer me">codeberg.org/<strong>AverageHelper</strong></a>
 	</li>
 	<li>
-		GitHub: {{ relMe("https://github.com/AverageHelper", "AverageHelper") }}
+		<a href="https://github.com/AverageHelper" target="_blank" rel="noopener noreferrer me" aria-hidden="true">
+			<svg class="svg logo github" viewBox="0 0 16 16" width="28" height="28">
+				<path fill="currentColor" d="M8 0c4.42 0 8 3.58 8 8a8.013 8.013 0 0 1-5.45 7.59c-.4.08-.55-.17-.55-.38 0-.27.01-1.13.01-2.2 0-.75-.25-1.23-.54-1.48 1.78-.2 3.65-.88 3.65-3.95 0-.88-.31-1.59-.82-2.15.08-.2.36-1.02-.08-2.12 0 0-.67-.22-2.2.82-.64-.18-1.32-.27-2-.27-.68 0-1.36.09-2 .27-1.53-1.03-2.2-.82-2.2-.82-.44 1.1-.16 1.92-.08 2.12-.51.56-.82 1.28-.82 2.15 0 3.06 1.86 3.75 3.64 3.95-.23.2-.44.55-.51 1.07-.46.21-1.61.55-2.33-.66-.15-.24-.6-.83-1.23-.82-.67.01-.27.38.01.53.34.19.73.9.82 1.13.16.45.68 1.31 2.69.94 0 .67.01 1.3.01 1.49 0 .21-.15.45-.55.38A7.995 7.995 0 0 1 0 8c0-4.42 3.58-8 8-8Z"></path>
+			</svg>
+		</a>
+		<a class="link" href="https://github.com/AverageHelper" target="_blank" rel="noopener noreferrer me">github.com/<strong>AverageHelper</strong></a>
 	</li>
 	<li>
 		<!-- Eventually I want @avg@average.name... -->
-		Mastodon: {{ relMe("https://fosstodon.org/@avghelper", "@avghelper@fosstodon.org") }}
+		<a href="https://fosstodon.org/@avghelper" target="_blank" rel="noopener noreferrer me" aria-hidden="true" >
+			<img class="logo fosstodon" src="/images/fosstodon-logo.png" alt="Fosstodon's logo" />
+		</a>
+		<a class="link" href="https://fosstodon.org/@avghelper" target="_blank" rel="noopener noreferrer me">fosstodon.org/<strong>@avghelper</strong></a>
 	</li>
 	<li>
-		Personal Email: {{ mailto("avghelper.5fh6g@simplelogin.co") }}
+		<a href="mailto:avghelper.5fh6g@simplelogin.co" aria-hidden="true">
+			<svg class="svg logo email" viewBox="0 0 28 28" width="28" height="28">
+				<path fill="currentColor" d="M12 2.02c5.514 0 10 4.486 10 10s-4.486 10-10 10-10-4.486-10-10 4.486-10 10-10zm0-2c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm0 12.55L6.008 8h11.983L12 12.57zm0 1.288L6 9.229V16h12V9.229l-6 4.629z"/>
+			</svg>
+		</a>
+		<a class="link" href="mailto:avghelper.5fh6g@simplelogin.co">avghelper.5fh6g@simplelogin.co</a>
 	</li>
 </ul>
 {% endblock %}
-
