--- a/templates/_layout.njk
+++ b/templates/_layout.njk
@@ -28,5 +28,8 @@
 			<p>This page generated without any content!</p>
 			{% endblock %}
 		</main>
+		<footer>
+			{% include "_footer.njk" %}
+		</footer>
 	</body>
 </html>
