feat: Add humans.txt

--- a/templates/_layout.njk
+++ b/templates/_layout.njk
@@ -6,6 +6,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<title>An Average Developer</title>
+		<link rel="author" href="humans.txt" />
 		<link rel="stylesheet" type="text/css" href="/styles/variables.css" media="screen" />
 		<link rel="stylesheet" type="text/css" href="/styles/colors.css" media="screen" />
 		<link rel="stylesheet" type="text/css" href="/styles/typography.css" media="screen" />
