--- a/templates/_footer.njk
+++ b/templates/_footer.njk
@@ -3,5 +3,6 @@
 
 <ul>
 	<li>{{ link("https://git.average.name/AverageHelper/portfolio", "View Source") }}</li>
+	<li>{{ link("/humans.txt", "humans.txt") }}</li>
 	<li>{{ pageLink(template.slug, "contact") }}</li>
 </ul>
