chore: Remove email address

--- a/templates/index.njk
+++ b/templates/index.njk
@@ -1,6 +1,6 @@
 {% extends "_layout.njk" %}
 
-{% from "_link.njk" import link, hint, relMe, mailto %}
+{% from "_link.njk" import link, hint %}
 
 {% block content %}
 <h1 id="about">About Myself</h1>
