--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -9,6 +9,7 @@ import LocalLink from "@/components/LocalLink.astro";
 	<head>
 		<meta charset="UTF-8" />
 		<title>An Average Developer</title>
+		<link rel="icon" type="image/png" href="data:image/png;base64," />
 		<link rel="author" href="humans.txt" />
 		<link rel="stylesheet" type="text/css" href="/styles/variables.css" media="screen" />
 		<link rel="stylesheet" type="text/css" href="/styles/colors.css" media="screen" />
