--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,7 +1,6 @@
 ---
 import Footer from "@/components/Footer.astro";
-import Link from "@/components/Link.astro";
-import LocalLink from "@/components/LocalLink.astro";
+import Header from "@/components/Header.astro";
 ---
 
 <!doctype html>
@@ -17,16 +16,7 @@ import LocalLink from "@/components/LocalLink.astro";
 		<link rel="stylesheet" type="text/css" href="/styles/style.css" media="screen" />
 	</head>
 	<body>
-		<header>
-			<nav>
-				<ul>
-					<li><LocalLink fileName="index">About</LocalLink></li>
-					<li><Link href="https://blog.average.name">Blog</Link></li>
-					<li><Link href="https://git.average.name/AverageHelper">Code</Link></li>
-					<li><LocalLink fileName="support">Support</LocalLink></li>
-				</ul>
-			</nav>
-		</header>
+		<Header />
 		<main class="content">
 			<slot>
 				<h1 id="missing-content">Something Went Wrong</h1>
