chore: Preprocess styles

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,8 @@
 ---
+import "../styles/variables.css";
+import "../styles/colors.css";
+import "../styles/typography.css";
+import "../styles/style.css";
 import Footer from "@/components/Footer.astro";
 import Header from "@/components/Header.astro";
 ---
@@ -10,10 +14,6 @@ import Header from "@/components/Header.astro";
 		<title>An Average Developer</title>
 		<link rel="icon" type="image/png" href="data:image/png;base64," />
 		<link rel="author" href="humans.txt" />
-		<link rel="stylesheet" type="text/css" href="/styles/variables.css" media="screen" />
-		<link rel="stylesheet" type="text/css" href="/styles/colors.css" media="screen" />
-		<link rel="stylesheet" type="text/css" href="/styles/typography.css" media="screen" />
-		<link rel="stylesheet" type="text/css" href="/styles/style.css" media="screen" />
 	</head>
 	<body>
 		<Header />
