--- a/src/styles/colors.css
+++ b/src/styles/colors.css
@@ -31,7 +31,7 @@
 	--input-background: rgba(0, 0, 0, 0.2);
 	--inverse-label: #333;
 	--search-field: #2b2b2c;
-	--link: #0aa567;
+	--link: #00abdf;
 
 	--separator: #3a3a3c;
 	--medium-separator: #3a3a3c;
