chore: Add OpenGraph tags and viewport help

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -11,9 +11,18 @@ import Header from "@/components/Header.astro";
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
+		<meta name="robots" content="noai" />
 		<title>An Average Developer</title>
 		<link rel="icon" type="image/png" href="data:image/png;base64," />
 		<link rel="author" href="humans.txt" />
+		<meta property="og:type" content="website" />
+		<meta property="og:locale" content="en" />
+		<meta property="og:url" content="https://average.name" />
+		<meta property="og:title" content="An Average Developer" />
+		<meta property="og:description" content="Helpful open-source software." />
+		<meta property="description" content="Helpful open-source software." />
+		<meta name="twitter:card" content="summary" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	</head>
 	<body>
 		<Header />
