--- a/src/components/Emoji.astro
+++ b/src/components/Emoji.astro
@@ -6,7 +6,7 @@ const emojiMap = {
 	blush: 128522,
 } as const;
 
-interface Props extends HTMLAttributes<"a"> {
+interface Props extends Omit<HTMLAttributes<"a">, "class"> {
 	name: keyof typeof emojiMap;
 }
 
