--- a/src/components/HintLink.astro
+++ b/src/components/HintLink.astro
@@ -1,9 +1,10 @@
 ---
 import type { HTMLAttributes } from "astro/types";
 
-interface Props extends HTMLAttributes<"a"> {
-	href: string;
+interface Props extends Omit<HTMLAttributes<"a">, "target" | "rel" | "class"> {
+	href: string | URL;
 }
+
 const { href, ...attrs } = Astro.props;
 ---
 
