--- a/src/components/Link.astro
+++ b/src/components/Link.astro
@@ -1,10 +1,20 @@
 ---
 import type { HTMLAttributes } from "astro/types";
 
-interface Props extends HTMLAttributes<"a"> {
-	href: string;
+interface Props extends Omit<HTMLAttributes<"a">, "target" | "rel"> {
+	href: string | URL;
+
+	/**
+	 * Whether the `rel` attribute should include the special `"me"` value.
+	 *
+	 * @default false
+	 */
+	relMe?: boolean;
 }
-const { href, ...attrs } = Astro.props;
+
+const { href, relMe = false, ...attrs } = Astro.props;
+
+const rel = `noopener noreferrer${relMe ? " me" : ""}`;
 ---
 
-<a href={href} target="_blank" rel="noopener noreferrer" {...attrs}><slot /></a>
+<a href={href} target="_blank" rel={rel} {...attrs}><slot /></a>
