--- a/src/components/LocalLink.astro
+++ b/src/components/LocalLink.astro
@@ -1,9 +1,10 @@
 ---
 import type { HTMLAttributes } from "astro/types";
 
-interface Props extends HTMLAttributes<"a"> {
+interface Props extends Omit<HTMLAttributes<"a">, "href" | "class"> {
 	fileName: string;
 }
+
 const { fileName, ...attrs } = Astro.props;
 
 const ext = "html";
