chore: One word nav link

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,7 +5,7 @@ import LocalLink from "./LocalLink.astro";
 
 <footer>
 	<ul>
-		<li><Link href="https://git.average.name/AverageHelper/portfolio">View Source</Link></li>
+		<li><Link href="https://git.average.name/AverageHelper/portfolio">Source</Link></li>
 		<li><Link href="/humans.txt">humans.txt</Link></li>
 		<li><LocalLink fileName="contact">Contact</LocalLink></li>
 	</ul>
