chore: Different tagline

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,9 +8,9 @@ import ProjectShowcase from "@/components/ProjectShowcase.astro";
 <Layout>
 	<h1 id="about">Average</h1>
 	<p>
-		I go by "Average Helper" online, partly because my name is super common. An average name, if you
-		will. I've been doing software things since 2011. I try to be helpful where I can, especially to
-		write respectful software.
+		I go by "Average Helper" online. I'm just a regular average developer girl, doing regular
+		average codethings. I've been doing software things since 2011. I try to be helpful where I can,
+		especially to write respectful software.
 	</p>
 
 	<hr />
