--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -32,7 +32,8 @@ import Link from "@/components/Link.astro";
 		<li>
 			<!-- Eventually I want @avg@average.name... -->
 			<Link relMe href="https://fosstodon.org/@avghelper" aria-hidden="true">
-				<img class="logo fosstodon" src="/images/fosstodon-logo.png" alt="Fosstodon's logo" />
+				<!-- <img class="logo fedi" src="/images/fosstodon-logo.png" alt="Fosstodon's logo" /> -->
+				<img class="logo fedi" src="/images/fediverse-logo.svg" alt="Fediverse logo" />
 			</Link>
 			<Link relMe class="link" href="https://fosstodon.org/@avghelper">
 				fosstodon.org/@avghelper
