--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -194,12 +194,12 @@ ul.contact li .svg {
 }
 
 img.logo.fedi {
-	border-radius: 48%;
+	--light-url: url("/images/fediverse-logo-light.svg");
 }
 
 @media (prefers-color-scheme: light) {
 	img.logo.fedi {
-		content: url("/images/fediverse-logo-light.svg");
+		content: var(--light-url);
 	}
 }
 
