feat: Add Fedi link

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -13,6 +13,15 @@ import Link from "./Link.astro";
 		<li>
 			<Link
 				relMe
+				href="https://git.average.name/AverageHelper"
+				data-tooltip="git.average.name/AverageHelper"
+			>
+				<img class="logo forgejo" src="/images/forgejo-logo.svg" alt="Forgejo's logo" />
+			</Link>
+		</li>
+		<li>
+			<Link
+				relMe
 				href="https://codeberg.org/AverageHelper"
 				data-tooltip="codeberg.org/AverageHelper"
 			>
