fix: Center footer links

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -44,6 +44,11 @@ footer {
 	text-align: center;
 }
 
+footer ul.links {
+	flex-flow: row nowrap;
+	justify-content: center;
+}
+
 footer ul.links li {
 	list-style-type: none;
 	width: fit-content;
