--- a/src/pages/links.astro
+++ b/src/pages/links.astro
@@ -42,7 +42,7 @@ import Link from "@/components/Link.astro";
 	<p>These are some helpful resources for trans&ast; peeps of all kinds:</p>
 	<ul>
 		<li
-			><Link href="https://strandsfortrans.org/">Strans For Trans</Link>, a global network of
+			><Link href="https://strandsfortrans.org/">Strands For Trans</Link>, a global network of
 			trans-affirming hair, beauty, and wellness industries and organizations.</li
 		>
 		<li
