chore: Move static redirects to the top level

--- a/src/pages/links.astro
+++ b/src/pages/links.astro
@@ -92,6 +92,6 @@ import Link from "@/components/Link.astro";
 	<p
 		>You can add to this page by submitting issues or PRs <!-- prettier-ignore -->
 		<Link href="https://git.average.name/AverageHelper/portfolio/src/branch/main/src/pages/links.astro">on my Git forge</Link>,
-		or by <Link relMe href="https://fosstodon.org/@avghelper">sending me a DM</Link>.</p
+		or by <Link relMe href="https://average.name/@avg">sending me a DM</Link>.</p
 	>
 </Layout>
