--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -16,7 +16,7 @@ import Link from "./Link.astro";
 				href="https://git.average.name/AverageHelper"
 				data-tooltip="git.average.name/AverageHelper"
 			>
-				<img class="logo forgejo" src="/images/forgejo-logo.svg" alt="Forgejo's logo" />
+				<img class="logo forgejo" src="/images/logo-forgejo.svg" alt="Forgejo's logo" />
 			</Link>
 		</li>
 		<li>
@@ -25,7 +25,7 @@ import Link from "./Link.astro";
 				href="https://codeberg.org/AverageHelper"
 				data-tooltip="codeberg.org/AverageHelper"
 			>
-				<img class="logo codeberg" src="/images/codeberg-logo.svg" alt="Codeberg's logo" />
+				<img class="logo codeberg" src="/images/logo-codeberg.svg" alt="Codeberg's logo" />
 			</Link>
 		</li>
 		<li>
@@ -41,7 +41,7 @@ import Link from "./Link.astro";
 		<li>
 			<!-- Eventually I want @avg@average.name... -->
 			<Link relMe href="https://fosstodon.org/@avghelper" data-tooltip="fosstodon.org/@avghelper">
-				<img class="logo fedi" src="/images/fediverse-logo.svg" alt="Fediverse logo" />
+				<img class="logo fedi" src="/images/logo-fediverse.svg" alt="Fediverse logo" />
 			</Link>
 		</li>
 	</ul>
